# vku

./: .gitattributes  AllocatedBuffer_8cppm.html  AllocatedImage_8cppm.html  AttachmentGroupBase_8cppm.html  AttachmentGroup_8cppm.html  Attachment_8cppm.html  Buffer_8cppm.html  CMakeLists.txt  CMakePresets.json  DescriptorSetLayout_8cppm.html  DescriptorSet_8cppm.html  Doxyfile  Gpu_8cppm.html  Image_8cppm.html  LICENSE.txt  MappedBuffer_8cppm.html  MsaaAttachmentGroup_8cppm.html  MsaaAttachment_8cppm.html  MultisampleAttachmentGroup_8cppm.html  MultisampleAttachment_8cppm.html  PoolSizes_8cppm.html  README.md  RefHolder_8cppm.html  Shader_8cppm.html  annotated.html  buffers_2mod_8cppm.html  classes.html  classvku_1_1AttachmentGroupBase-members.html  classvku_1_1AttachmentGroupBase.html  classvku_1_1DescriptorSet-members.html  classvku_1_1DescriptorSet.html  classvku_1_1Gpu-members.html  classvku_1_1Gpu.html  classvku_1_1MappedBuffer-members.html  classvku_1_1MappedBuffer.html  classvku_1_1RefHolder-members.html  classvku_1_1RefHolder.html  commands_8cppm.html  constants_8cppm.html  debugging_8cppm.html  (+115 more)
.github/workflows/: CMakeUserPresets.json  build.yml  ci-fix.patch  doxygen-pages.yml  linux.yml  macos.yml  windows.yml
.github/workflows/scripts/: CMakeUserPresets.json
cmake/: CompileVulkanShaders.cmake  config.cmake.in  is_subdirectory.cmake
docs/: hello-triangle.md  using-vku.md
examples/: CMakeLists.txt  impl.cpp
examples/00-compute-device/: CMakeLists.txt  main.cpp
examples/00-compute-device/pipelines/: MultiplyComputer.hpp
examples/00-compute-device/shaders/: multiply.comp
examples/01-headless-surface/: CMakeLists.txt  main.cpp
examples/01-headless-triangle/: CMakeLists.txt  main.cpp
examples/01-headless-triangle/pipelines/: TriangleRenderer.hpp
examples/01-headless-triangle/shaders/: triangle.vert
examples/02-glfw-imgui/: CMakeLists.txt  main.cpp
examples/02-headless-msaa-triangle/: CMakeLists.txt  main.cpp
examples/02-headless-msaa-triangle/pipelines/: TriangleRenderer.hpp
examples/02-headless-msaa-triangle/shaders/: triangle.frag
examples/03-cube-in-flight/: CMakeLists.txt  main.cpp
examples/03-cube-in-flight/pipelines/: MeshRenderer.hpp
examples/03-cube-in-flight/shaders/: mesh.frag  mesh.vert
examples/04-imgui/: CMakeLists.txt  main.cpp
examples/compute-device/: CMakeLists.txt  main.cpp
examples/extlibs/: CMakeLists.txt
examples/extlibs/include/extlibs/: ranges.hpp
examples/headless-device/: CMakeLists.txt  main.cpp
examples/textured_cube/: CMakeLists.txt  impl.cpp  main.cpp
examples/textured_cube/shaders/: cube.frag  cube.vert
examples/triangle/: CMakeLists.txt  impl.cpp  main.cpp
examples/triangle_1_3/: CMakeLists.txt  main.cpp
examples/triangle_1_3/shaders/: triangle.vert
extlibs/module-ports/: vk_mem_alloc.cppm
include/: lifetimebound.hpp  macros.hpp  vku.hpp
include/vku/: Allocator.hpp  AttachmentGroup.hpp  DescriptorSetLayouts.hpp  DescriptorSets.hpp  GlfwWindow.hpp  Gpu.hpp  Instance.hpp  MsaaAttachmentGroup.hpp  RefHolder.hpp  Shader.hpp  Swapchain.hpp  buffers.hpp  commands.hpp  images.hpp  pipelines.hpp  rendering.hpp  utils.hpp
include/vku/details/: concepts.hpp  macros.hpp  nofield.hpp  ranges.hpp  reflect.hpp
interface/: Gpu.cppm  commands.cppm  constants.cppm  debugging.cppm  mod.cppm  queue.cppm
interface/buffers/: AllocatedBuffer.cppm  Buffer.cppm  MappedBuffer.cppm  mod.cppm
interface/descriptors/: DescriptorSet.cppm  DescriptorSetLayout.cppm  DescriptorSetLayouts.cppm  DescriptorSets.cppm  PoolSizes.cppm  mod.cppm
interface/details/: concepts.cppm  functional.cppm  mod.cppm  ranges.cppm  to_string.cppm  tuple.cppm
interface/details/container/: OnDemandCounterStorage.cppm
interface/images/: AllocatedImage.cppm  Image.cppm  mod.cppm
interface/pipelines/: Shader.cppm  mod.cppm
interface/rendering/: Attachment.cppm  AttachmentGroup.cppm  AttachmentGroupBase.cppm  MsaaAttachment.cppm  MsaaAttachmentGroup.cppm  MultisampleAttachment.cppm  MultisampleAttachmentGroup.cppm  mod.cppm
interface/utils/: RefHolder.cppm  mod.cppm
overlays/vulkan/: vcpkg.json
overlays/vulkan-memory-allocator/: portfile.cmake  tu-local-entity.patch
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+36 more)
src/: AttachmentGroup.cpp  GlfwWindow.cpp  MsaaAttachmentGroup.cpp  Shader.cpp  buffers.cpp  images.cpp  pipelines.cpp  rendering.cpp
test/: CMakeLists.txt  execute_hierarchical_commands.cpp  get_mip_view_create_infos.cpp  pool_sizes.cpp  specialization_constant.cpp
test/msaa-triangle/: CMakeLists.txt  main.cpp
test/msaa-triangle/shaders/: triangle.frag
test/shaders/get_mip_view_create_infos/: color_check.comp
test/shaders/specialization_constant/: buffer_fill.comp
test/swapchain-msaa-triangle/: CMakeLists.txt  main.cpp
test/swapchain-msaa-triangle/shaders/: triangle.vert
test/swapchain-triangle/: CMakeLists.txt  main.cpp
test/triangle/: CMakeLists.txt  main.cpp
